<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="setValue"
    tools:context=".MainActivity">

    <jonathan.furminger.myapplication2.MyButton
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="setValue"
        android:text="@string/button1"
        app:row="0"
        app:col="0"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button2" />

    <jonathan.furminger.myapplication2.MyButton
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="setValue"
        android:text="@string/button2"
        app:row="0"
        app:col="1"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <jonathan.furminger.myapplication2.MyButton
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:onClick="setValue"
        android:text="@string/button3"
        app:row="0"
        app:col="2"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <jonathan.furminger.myapplication2.MyButton
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="setValue"
        android:text="@string/button4"
        app:row="1"
        app:col="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintTop_toTopOf="parent" />

    <jonathan.furminger.myapplication2.MyButton
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="setValue"
        android:text="@string/button5"
        app:row="1"
        app:col="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <jonathan.furminger.myapplication2.MyButton
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="setValue"
        android:text="@string/button6"
        app:row="1"
        app:col="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="parent" />

    <jonathan.furminger.myapplication2.MyButton
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="setValue"
        android:text="@string/button7"
        app:row="2"
        app:col="0"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <jonathan.furminger.myapplication2.MyButton
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="setValue"
        android:text="@string/button8"
        app:row="2"
        app:col="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <jonathan.furminger.myapplication2.MyButton
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="setValue"
        android:text="@string/button9"
        app:row="2"
        app:col="2"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

</androidx.constraintlayout.widget.ConstraintLayout>